fix: restore missing background for inline code in markdown (#12038)

--- a/packages/vaadin-lumo-styles/src/components/markdown.css
+++ b/packages/vaadin-lumo-styles/src/components/markdown.css
@@ -14,4 +14,8 @@
   hr {
     margin-block: revert-layer;
   }
+
+  code {
+    background-color: var(--lumo-contrast-10pct);
+  }
 }
